syntax = "proto3";

package blog;

service BlogService {
  rpc Register(RegisterRequest) returns (RegisterResponse);

  rpc Login(LoginRequest) returns (LoginResponse);

  rpc CreatePost(LoginRequest) returns (LoginResponse);

  rpc GetPost(LoginRequest) returns (LoginResponse);

  rpc UpdatePost(LoginRequest) returns (LoginResponse);

  rpc DeletePost(DeletePostRequest) returns (LoginResponse);

  rpc ListPosts(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {

}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
}

message User {

}

message CreatePostRequest {

}

message GetPostRequest {
  Post post = 1;
}

message UpdatePostRequest {

}

message DeletePostRequest {

}

message Post {

}
